# device-stats-service

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: devices.py  users.py
app/db/: session.py
app/models/: device.py  measurement.py  user.py
app/schemas/: analytics.py  device.py  measurement.py  user.py
app/services/: analytics.py
